Updated CSS to prevent horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,13 @@
 
 .bg-image {
   /* blur effect */
-  filter: blur(1.5px);
-  -webkit-filter: blur(1.5px);
+  filter: blur(1px);
+  -webkit-filter: blur(1px);
 
   /* center and scale the image */
   background-position: center;
   background-repeat: no-repeat;
-  /* background-size: cover; */
-  /* width: 100wv; */
+  background-size: cover;
 }
 
 /* position text in the middle of the image */
@@ -132,6 +131,11 @@ footer {
   font-family: "Roboto", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 .body {
   text-align: left;
   margin-top: 3%;
@@ -183,13 +187,6 @@ footer {
 
 /* Carousel for Spruce Rosewood */
 
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family: Verdana, sans-serif;
-  margin: 0;
-}
 .mySlides {
   display: none;
 }
